fix(global): hid vertical nav at 1200px, updated component spacing

--- a/src/patternfly/components/Wizard/wizard.scss
+++ b/src/patternfly/components/Wizard/wizard.scss
@@ -85,7 +85,7 @@
   --pf-c-wizard__toggle--PaddingLeft: calc(var(--pf-global--spacer--md) + var(--pf-c-wizard__nav-link--before--Width) + var(--pf-global--spacer--sm));
   --pf-c-wizard__toggle--m-expanded--BorderBottomWidth: var(--pf-global--BorderWidth--sm);
   --pf-c-wizard__toggle--m-expanded--BorderBottomColor: var(--pf-global--BorderColor--100);
-  --pf-c-wizard--m-in-page__toggle--md--PaddingLeft: calc(var(--pf-global--spacer--xl) + var(--pf-c-wizard__nav-link--before--Width) + var(--pf-global--spacer--sm));
+  --pf-c-wizard--m-in-page__toggle--xl--PaddingLeft: calc(var(--pf-global--spacer--xl) + var(--pf-c-wizard__nav-link--before--Width) + var(--pf-global--spacer--sm));
 
   // Toggle number
   --pf-c-wizard__toggle-num--before--Top: 0;
@@ -132,7 +132,8 @@
   --pf-c-wizard__nav-list--lg--PaddingLeft: calc(var(--pf-global--spacer--xl) + var(--pf-c-wizard__nav-link--before--Width) + var(--pf-global--spacer--sm));
   --pf-c-wizard__nav-list--nested--MarginLeft: var(--pf-global--spacer--md);
   --pf-c-wizard__nav-list--nested--MarginTop: var(--pf-global--spacer--md);
-  --pf-c-wizard--m-in-page__nav-list--md--PaddingLeft: calc(var(--pf-global--spacer--xl) + var(--pf-c-wizard__nav-link--before--Width) + var(--pf-global--spacer--sm));
+  --pf-c-wizard--m-in-page__nav-list--md--PaddingLeft: calc(var(--pf-global--spacer--md) + var(--pf-c-wizard__nav-link--before--Width) + var(--pf-global--spacer--sm));
+  --pf-c-wizard--m-in-page__nav-list--xl--PaddingLeft: calc(var(--pf-global--spacer--lg) + var(--pf-c-wizard__nav-link--before--Width) + var(--pf-global--spacer--sm));
 
   @media screen and (min-width: $pf-global--breakpoint--lg) {
     --pf-c-wizard__nav-list--PaddingRight: var(--pf-c-wizard__nav-list--lg--PaddingRight);
@@ -144,7 +145,7 @@
 
   // Outer wrap
   --pf-c-wizard__outer-wrap--BackgroundColor: var(--pf-global--BackgroundColor--100);
-  --pf-c-wizard__outer-wrap--lg--PaddingLeft: var(--pf-c-wizard__nav--lg--Width);
+  --pf-c-wizard__outer-wrap--lg--PaddingLeft: var(--pf-c-wizard__nav--Width);
 
   // Main
   --pf-c-wizard__main--ZIndex: var(--pf-global--ZIndex--xs);
@@ -158,10 +159,12 @@
   --pf-c-wizard__main-body--lg--PaddingRight: var(--pf-global--spacer--xl);
   --pf-c-wizard__main-body--lg--PaddingBottom: var(--pf-global--spacer--xl);
   --pf-c-wizard__main-body--lg--PaddingLeft: var(--pf-global--spacer--xl);
-  --pf-c-wizard--m-in-page__main-body--md--PaddingTop: var(--pf-global--spacer--xl);
-  --pf-c-wizard--m-in-page__main-body--md--PaddingRight: var(--pf-global--spacer--xl);
-  --pf-c-wizard--m-in-page__main-body--md--PaddingBottom: var(--pf-global--spacer--xl);
-  --pf-c-wizard--m-in-page__main-body--md--PaddingLeft: var(--pf-global--spacer--xl);
+  --pf-c-wizard--m-in-page__main-body--md--PaddingTop: var(--pf-global--spacer--md);
+  --pf-c-wizard--m-in-page__main-body--md--PaddingRight: var(--pf-global--spacer--md);
+  --pf-c-wizard--m-in-page__main-body--md--PaddingBottom: var(--pf-global--spacer--md);
+  --pf-c-wizard--m-in-page__main-body--md--PaddingLeft: var(--pf-global--spacer--md);
+  --pf-c-wizard--m-in-page__main-body--xl--PaddingRight: var(--pf-global--spacer--lg);
+  --pf-c-wizard--m-in-page__main-body--xl--PaddingLeft: var(--pf-global--spacer--lg);
 
   @media screen and (min-width: $pf-global--breakpoint--lg) {
     --pf-c-wizard__main-body--PaddingTop: var(--pf-c-wizard__main-body--lg--PaddingTop);
@@ -181,10 +184,12 @@
   --pf-c-wizard__footer--lg--PaddingLeft: var(--pf-global--spacer--xl);
   --pf-c-wizard__footer--child--MarginRight: var(--pf-global--spacer--md);
   --pf-c-wizard__footer--child--MarginBottom: var(--pf-global--spacer--sm);
-  --pf-c-wizard--m-in-page__footer--md--PaddingTop: var(--pf-global--spacer--xl);
-  --pf-c-wizard--m-in-page__footer--md--PaddingRight: var(--pf-global--spacer--xl);
+  --pf-c-wizard--m-in-page__footer--md--PaddingTop: var(--pf-global--spacer--md);
+  --pf-c-wizard--m-in-page__footer--md--PaddingRight: var(--pf-global--spacer--md);
   --pf-c-wizard--m-in-page__footer--md--PaddingBottom: var(--pf-global--spacer--lg);
-  --pf-c-wizard--m-in-page__footer--md--PaddingLeft: var(--pf-global--spacer--xl);
+  --pf-c-wizard--m-in-page__footer--md--PaddingLeft: var(--pf-global--spacer--md);
+  --pf-c-wizard--m-in-page__footer--xl--PaddingRight: var(--pf-global--spacer--lg);
+  --pf-c-wizard--m-in-page__footer--xl--PaddingLeft: var(--pf-global--spacer--lg);
 
   @media screen and (min-width: $pf-global--breakpoint--lg) {
     --pf-c-wizard__footer--PaddingTop: var(--pf-c-wizard__footer--lg--PaddingTop);
@@ -246,8 +251,16 @@
       --pf-c-wizard__footer--PaddingRight: var(--pf-c-wizard--m-in-page__footer--md--PaddingRight);
       --pf-c-wizard__footer--PaddingBottom: var(--pf-c-wizard--m-in-page__footer--md--PaddingBottom);
       --pf-c-wizard__footer--PaddingLeft: var(--pf-c-wizard--m-in-page__footer--md--PaddingLeft);
-      --pf-c-wizard__toggle--PaddingLeft: var(--pf-c-wizard--m-in-page__toggle--md--PaddingLeft);
       --pf-c-wizard__nav-list--PaddingLeft: var(--pf-c-wizard--m-in-page__nav-list--md--PaddingLeft);
+    }
+
+    @media screen and (min-width: $pf-global--breakpoint--xl) {
+      --pf-c-wizard__main-body--PaddingRight: var(--pf-c-wizard--m-in-page__main-body--xl--PaddingRight);
+      --pf-c-wizard__main-body--PaddingLeft: var(--pf-c-wizard--m-in-page__main-body--xl--PaddingLeft);
+      --pf-c-wizard__footer--PaddingRight: var(--pf-c-wizard--m-in-page__footer--xl--PaddingRight);
+      --pf-c-wizard__footer--PaddingLeft: var(--pf-c-wizard--m-in-page__footer--xl--PaddingLeft);
+      --pf-c-wizard__toggle--PaddingLeft: var(--pf-c-wizard--m-in-page__toggle--xl--PaddingLeft);
+      --pf-c-wizard__nav-list--PaddingLeft: var(--pf-c-wizard--m-in-page__nav-list--xl--PaddingLeft);
     }
 
     @media screen and (min-width: $pf-global--breakpoint--lg) {
