--- a/src/patternfly/layouts/Grid/grid.scss
+++ b/src/patternfly/layouts/Grid/grid.scss
@@ -40,13 +40,8 @@
 // Grid base
 .pf-l-grid {
   --pf-l-grid--m-gutter--GridGap: var(--pf-global--gutter);
-  --pf-l-grid--m-gutter--md--GridGap: var(--pf-global--gutter--md);
   --pf-l-grid__item--GridColumnStart: auto;
   --pf-l-grid__item--GridColumnEnd: span 12;
-
-  @media screen and (min-width: $pf-global--breakpoint--md) {
-    --pf-l-grid--m-gutter--GridGap: var(--pf-l-grid--m-gutter--md--GridGap);
-  }
 
   display: grid;
   grid-template-columns: repeat(12, [col-start] 1fr);
