--- a/src/patternfly/layouts/Level/level.scss
+++ b/src/patternfly/layouts/Level/level.scss
@@ -1,10 +1,5 @@
 .pf-l-level {
   --pf-l-level--m-gutter--MarginRight: var(--pf-global--gutter);
-  --pf-l-level--m-gutter--md--MarginRight: var(--pf-global--gutter--md);
-
-  @media screen and (min-width: $pf-global--breakpoint--md) {
-    --pf-l-level--m-gutter--MarginRight: var(--pf-l-level--m-gutter--md--MarginRight);
-  }
 
   display: flex;
   flex-wrap: wrap;
